--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@vercel/blob": "latest",
     "@vercel/kv": "latest",
     "@vercel/postgres": "latest",
-    "bcryptjs": "latest",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
